<resources>
    <string name="app_name">COVID-19</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_country_name">Search by Country name</string>
    <string name="eg_india">eg:-India</string>
    <string name="todo">TODO</string>
    <string name="country">Country</string>
    <string name="total_cases">Total\nCases</string>
    <string name="new_cases">New\nCases</string>
    <string name="total_deaths">Total\nDeaths</string>
    <string name="new_deaths">New\nDeaths</string>
    <string name="total_recovered">Total\nRecovered</string>
    <string name="total_active">Total\nActive</string>
    <string name="total_critical">Total\nCritical</string>
    <string name="india">INDIA</string>
    <string name="in_mild_condition">in Mild condition</string>
    <string name="critical">Critical</string>
    <string name="coronavirus_cases">Coronavirus Cases</string>
    <string name="active_cases">ACTIVE CASES</string>
    <string name="currently_infected_patients">Currently Infected Patients</string>
    <string name="closed_cases">CLOSED CASES</string>
    <string name="recovered_discharged">Recovered/Discharged</string>
    <string name="cases_which_had_an_outcome">Cases which had an outcome:</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="state">State</string>
    <string name="global">Global</string>
    <string name="all_countries">All Countries</string>
    <string name="states">States</string>
</resources>
