<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/container"
    android:orientation="vertical"
    tools:context=".AllCountry">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.5dp"
                    android:background="@color/colorAccent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="@string/country"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="@string/total_cases"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/newCases"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="@string/new_cases"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/totalDeaths"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="@string/total_deaths"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/newDeaths"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="@string/new_deaths"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/totalRecovered"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="@string/total_recovered"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/totalActive"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="@string/total_active"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/totalCritical"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="@string/total_critical"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        tools:ignore="PrivateResource" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/global_item_list"
                    tools:targetApi="lollipop" />
            </RelativeLayout>
        </HorizontalScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>